# PROYECTO-FINAL

PROYECTO FINAL/: CMakeLists.txt  Clinica.cpp  Clinica.h  Consultorio.cpp  Consultorio.h  Cuartos.cpp  Cuartos.h  Doctores.cpp  Doctores.h  Enfermeros.cpp  Enfermeros.h  Pacientes.cpp  Pacientes.h  Personas.cpp  Personas.h  SalaOperaciones.cpp  SalaOperaciones.h  main.cpp  tipos.h
